# unity-asset

./: .clippy.toml  .gitignore  ASYNC_REFACTOR_V2_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  cliff.toml  dist-workspace.toml  release-plz.toml  rustfmt.toml
apps/unity-asset-search-cli/: Cargo.toml
apps/unity-asset-search-cli/src/: main.rs
apps/unity-asset-search-daemon/: Cargo.toml
apps/unity-asset-search-daemon/src/: main.rs
crates/unity-asset/: Cargo.toml
crates/unity-asset-binary/: CHANGELOG.md  Cargo.toml
crates/unity-asset-binary/examples/: load_and_list.rs  scan_pptrs.rs  sniff_kind.rs  typetree_registry_json.rs
crates/unity-asset-binary/src/: lib.rs  object.rs  shared_bytes.rs  unity_objects.rs  unity_version.rs  webfile.rs
crates/unity-asset-binary/tests/: bundle_asset_filtering_tests.rs  bundle_lazy_decompress_tests.rs  bundle_limits_tests.rs  gameobject_transform_tests.rs  legacy_bundle_unityraw_tests.rs  legacy_bundle_unityweb_tests.rs  metadata_extractor_dependency_graph_tests.rs  typelessdata_tests.rs  typetree_advanced_tests.rs  typetree_registry_tests.rs
crates/unity-asset-decode/: Cargo.toml
crates/unity-asset-decode/examples/: debug_texture_formats.rs  export_textures.rs
crates/unity-asset-decode/tests/: audio_processing_tests.rs  texture_raw_streamdata_tests.rs  texture_typetree_streamdata_tests.rs  unitypy_sprite_tests.rs  unitypy_texture_tests.rs
crates/unity-asset-search-core/: Cargo.toml
crates/unity-asset-search-core/src/: lib.rs
crates/unity-asset-search-index/: Cargo.toml
crates/unity-asset-search-index/examples/: reindex_project.rs
crates/unity-asset-search-index/src/: lib.rs
crates/unity-asset-write/: Cargo.toml
crates/unity-asset-write/src/: binary_writer.rs  compression.rs  lib.rs  packer.rs
crates/unity-asset-write/tests/: corpus_roundtrip.rs  edit_session.rs  external_corpus_roundtrip.rs  legacy_bundle_save.rs  legacy_serialized_v8_roundtrip.rs  unitypy_e2e.rs  webfile_writer.rs
crates/unity-asset-yaml/: CHANGELOG.md  Cargo.toml
crates/unity-asset-yaml/src/: serde_unity_loader.rs  unity_yaml_serializer.rs  yaml_document.rs
crates/unity-asset-yaml/tests/: advanced_filtering_tests.rs  serde_integration_tests.rs  serialization_tests.rs
crates/unity-asset/examples/: env_dependency_graph.rs  env_export_index_jsonl.rs  env_load_and_list.rs  env_object_graph.rs  env_project_object_graph.rs  env_read_stream_data.rs  yaml_load_summary.rs
crates/unity-asset/src/: environment.rs
crates/unity-asset/tests/: golden_regression_tests.rs
unity-asset-binary/: Cargo.toml
unity-asset-binary/examples/: debug_texture_formats.rs  texture_decoding_demo.rs
unity-asset-binary/src/: asset.rs  audio.rs  bundle.rs  compression.rs  data_view.rs  error.rs  file.rs  lib.rs  mesh.rs  metadata.rs  object.rs  performance.rs  reader.rs  shared_bytes.rs  sprite.rs  texture.rs  typetree.rs  unity_objects.rs  unity_version.rs  webfile.rs
unity-asset-binary/src/asset/: header.rs  mod.rs  parser.rs  types.rs
unity-asset-binary/src/audio/: converter.rs  decoder.rs  export.rs  formats.rs  mod.rs  types.rs
unity-asset-binary/src/bundle/: compression.rs  header.rs  loader.rs  mod.rs  parser.rs  types.rs
unity-asset-binary/src/mesh/: mod.rs  parser.rs  processor.rs  types.rs
unity-asset-binary/src/metadata/: analyzer.rs  extractor.rs  mod.rs  types.rs
unity-asset-binary/src/sprite/: mod.rs  parser.rs  processor.rs  types.rs
unity-asset-binary/src/texture/: converter.rs  formats.rs  mod.rs  (+1 more)
unity-asset-binary/tests/: audio_processing_tests.rs  bundle_lazy_decompress_tests.rs  bundle_limits_tests.rs  comprehensive_compatibility_report.rs  debug_object_analysis.rs  gameobject_transform_tests.rs  integration_gameobject_tests.rs  metadata_extraction_tests.rs  numeric_array_fastpath_tests.rs  peek_name_tests.rs  pptr_scan_tests.rs  referenced_object_tests.rs  sprite_processing_tests.rs  texture_processing_tests.rs  texture_raw_streamdata_tests.rs  texture_typetree_streamdata_tests.rs  typelessdata_tests.rs  typetree_advanced_tests.rs  typetree_registry_tests.rs  unity_object_parsing_tests.rs  unitypy_audio_tests.rs  unitypy_compatibility_tests.rs  unitypy_complete_tests.rs  unitypy_extractor_tests.rs  unitypy_main_tests.rs  unitypy_phase3_tests.rs  unitypy_sprite_tests.rs  unitypy_texture_tests.rs  unitypy_typetree_tests.rs
unity-asset-cli/: Cargo.toml
unity-asset-cli/src/: cli.rs  fast_path.rs  main.rs  main_async.rs  shared.rs
unity-asset-core/: Cargo.toml
unity-asset-core/src/: constants.rs  document.rs  dynamic_access.rs  error.rs  lib.rs  unity_class.rs  unity_value.rs
unity-asset-decode/: Cargo.toml
unity-asset-decode/examples/: texture_decoding_demo.rs
unity-asset-decode/src/: lib.rs
unity-asset-decode/tests/: audio_processing_tests.rs  comprehensive_compatibility_report.rs  sprite_processing_tests.rs  texture_processing_tests.rs  unitypy_audio_tests.rs  unitypy_complete_tests.rs
unity-asset-lib/: Cargo.toml
unity-asset-lib/examples/: env_container_lookup.rs  env_find_and_dump.rs  env_webfile_list_entries.rs
unity-asset-lib/src/: environment.rs  lib.rs
unity-asset-lib/tests/: golden_regression_tests.rs  send_sync.rs
unity-asset-search-cli/: Cargo.toml
unity-asset-search-cli/src/: main.rs
unity-asset-search-daemon/: Cargo.toml
unity-asset-search-daemon/src/: main.rs
unity-asset-search-index/: Cargo.toml
unity-asset-search-index/src/: lib.rs
unity-asset-yaml/: Cargo.toml
unity-asset-yaml/src/: constants.rs  lib.rs  python_like_api.rs  serde_unity_loader.rs  unity_yaml_serializer.rs  yaml_document.rs
unity-asset-yaml/tests/: comprehensive_tests.rs  reference_library_compatibility_tests.rs  serialization_tests.rs
v2/: Cargo.toml
v2/tests/: integration_test.rs  test_extractor_unitypy_compat.rs  test_main_unitypy_compat.rs  test_typetree_unitypy_compat.rs  test_unity_version_unitypy_compat.rs
v2/unity-asset-binary-v2/: Cargo.toml
v2/unity-asset-cli-v2/: Cargo.toml
v2/unity-asset-core-v2/: Cargo.toml
v2/unity-asset-yaml-v2/: Cargo.toml
(+219 files in other folders)
