[workspace]
members = [
    "unity-asset-core",
    "unity-asset-yaml",
    "unity-asset-binary",
    "unity-asset-lib",
    "unity-asset-cli",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
indexmap = { version = "2.0", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0.92"

# Binary parsing
binrw = "0.15"
byteorder = "1.5"
image = "0.25"
flate2 = "1.0"
lz4_flex = "0.11"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Async support
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
tokio-stream = "0.1"
async-stream = "0.3"

# Testing
tempfile = "3.8"

# Utilities
lazy_static = "1.4"
once_cell = "1.19"
regex = "1.10"

# This is now a pure workspace - no package definition
# Individual crates are in their respective directories:
# - unity-asset-lib/     -> Main library crate (published as "unity-asset")
# - unity-asset-cli/     -> CLI tools (published as "unity-asset-cli")
# - unity-asset-core/    -> Core data structures
# - unity-asset-yaml/    -> YAML format support
# - unity-asset-binary/  -> Binary format support
