[workspace]
members = [
    "unity-asset-core",
    "unity-asset-yaml",
    "unity-asset-binary",
    "unity-asset-decode",
    "unity-asset-lib",
    "unity-asset-cli",
    "unity-asset-search-core",
    "unity-asset-search-index",
    "unity-asset-search-daemon",
    "unity-asset-search-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
license = "MIT"
repository = "https://github.com/Latias94/unity-asset"
homepage = "https://github.com/Latias94/unity-asset"

[workspace.dependencies]
# Core dependencies
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
serde_bytes = "0.11"
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"
anyhow = "1"

# Binary parsing
binrw = "0.15"
byteorder = "1.5"
image = "0.25"
flate2 = "1.1"
lz4_flex = "0.12"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async support
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
tokio-stream = "0.1"
async-stream = "0.3"

# Testing
tempfile = "3.24"

# Utilities
lazy_static = "1.5"
once_cell = "1.21"
regex = "1.12"
unicode-normalization = "0.1"
tantivy = "0.25"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
fuzzy-matcher = "0.3"
rand = "0.9"
hex = "0.4"
ignore = "0.4"

# This is now a pure workspace - no package definition
# Individual crates are in their respective directories:
# - unity-asset-lib/     -> Main library crate (published as "unity-asset")
# - unity-asset-cli/     -> CLI tools (published as "unity-asset-cli")
# - unity-asset-core/    -> Core data structures
# - unity-asset-yaml/    -> YAML format support
# - unity-asset-binary/  -> Binary format support
