[package]
name = "unity-asset-binary"
version = "0.1.0"
edition = "2024"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
description = "Unity binary file format parser (AssetBundle, SerializedFile)"
license = "MIT"
repository = "https://github.com/Latias94/unity-asset"
documentation = "https://docs.rs/unity-asset-binary"
keywords = ["unity", "binary", "assetbundle", "serialized", "parser"]
categories = ["parser-implementations", "game-development"]
exclude = ["tests/samples/*"]

[dependencies]
# Core dependencies
unity-asset-core = { path = "../unity-asset-core", version = "0.1.0" }
serde = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
anyhow = { workspace = true }

# Binary parsing
binrw = { workspace = true }
byteorder = { workspace = true }
regex = { workspace = true }

# Compression support
flate2 = { workspace = true }
lz4_flex = { workspace = true }
lzma-rs = "0.3"
brotli = "3.4"

# Performance and utilities
once_cell = { workspace = true }
num_cpus = "1.16"

# Async support (optional)
tokio = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
async-stream = { workspace = true, optional = true }

# Image processing
image = { workspace = true }

# Audio processing (optional)
symphonia = { version = "0.5", features = ["all"], optional = true }
hound = { version = "3.5", optional = true }
base64 = "0.21"

# Advanced texture decoding (optional)
texture2ddecoder = { version = "0.1", optional = true }

# 3D model processing (optional)
obj = { version = "0.10", optional = true }

[features]
default = ["texture", "audio", "mesh", "sprite", "texture-advanced"]

# 异步支持
async = ["unity-asset-core/async", "tokio", "futures", "async-trait", "tokio-stream", "async-stream"]

# 主要功能模块
texture = []                                          # 纹理处理 (基础+高级格式)
audio = ["symphonia", "hound"]                        # 音频处理 (所有格式)
mesh = []                                             # 网格处理 (基础+导出)
sprite = []                                           # Sprite处理

# 高级功能 (可选)
texture-advanced = ["texture2ddecoder"]               # 高级纹理格式 (DXT, ETC, ASTC)
mesh-export = ["obj"]                                 # 网格导出功能

# 便捷组合
minimal = []                                          # 仅核心解析功能
full = ["texture", "audio", "mesh", "sprite", "texture-advanced", "mesh-export"]

[dev-dependencies]
hex = "0.4"
