[package]
name = "unity-asset-binary"
version = "0.1.0"
edition = "2024"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
description = "Unity binary file format parser (AssetBundle, SerializedFile)"
license = "MIT"
repository = "https://github.com/Latias94/unity-asset"
documentation = "https://docs.rs/unity-asset-binary"
keywords = ["unity", "binary", "assetbundle", "serialized", "parser"]
categories = ["parser-implementations", "game-development"]
exclude = [
    "tests/samples/*",
    "tests/fixtures/*",
    "*.ab",
    "*.unity",
    "*.asset",
    "*.prefab",
    "*.meta",
]

[dependencies]
# Core dependencies
unity-asset-core = { path = "../unity-asset-core", version = "0.1.0" }
serde = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
serde_json = { workspace = true }

# Binary parsing
binrw = { workspace = true }
byteorder = { workspace = true }
regex = { workspace = true }

# Compression support
flate2 = { workspace = true }
lz4_flex = { workspace = true }
lzma-rs = "0.3"
brotli = "3.4"
xz2 = { version = "0.1", optional = true }

# Performance and utilities
once_cell = { workspace = true }
num_cpus = "1.16"

# Async support (optional)
tokio = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
async-stream = { workspace = true, optional = true }

[features]
default = []

# 异步支持
async = ["unity-asset-core/async", "tokio", "futures", "async-trait", "tokio-stream", "async-stream"]
xz2 = ["dep:xz2"]                                     # XZ2 LZMA压缩支持

[dev-dependencies]
hex = "0.4"
