[package]
name = "unity-asset-cli"
version = "0.1.0"
edition = "2024"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
description = "Command-line tools for Unity asset parsing and manipulation"
license = "MIT"
repository = "https://github.com/Latias94/unity-asset"
documentation = "https://docs.rs/unity-asset-cli"
keywords = ["unity", "assets", "cli", "parser", "game"]
categories = ["command-line-utilities", "parsing", "game-development"]
exclude = [
    "tests/samples/*",
]

[[bin]]
name = "unity-asset"
path = "src/main.rs"

[[bin]]
name = "unity-asset-async"
path = "src/main_async.rs"
required-features = ["async"]

[dependencies]
# Core library
unity-asset = { path = "../unity-asset-lib", version = "0.1.0" }

# CLI dependencies
clap = { workspace = true }
anyhow = { workspace = true }

# Async CLI dependencies (optional)
tokio = { version = "1.0", features = ["fs", "io-util", "rt-multi-thread", "macros"], optional = true }
futures = { version = "0.3", optional = true }
indicatif = { version = "0.17", optional = true }

[features]
default = []
async = ["unity-asset/async", "tokio", "futures", "indicatif"]

[dev-dependencies]
tempfile = { workspace = true }
