[package]
name = "unity-asset-core"
version = "0.1.0"
edition = "2024"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
description = "Core data structures and traits for Unity asset parsing"
license = "MIT"
repository = "https://github.com/Latias94/unity-asset"
documentation = "https://docs.rs/unity-asset-core"
keywords = ["unity", "assets", "core", "game"]
categories = ["parsing", "game-development"]
exclude = [
    "tests/fixtures/*",
    "tests/samples/*",
    "*.ab",
    "*.unity",
    "*.asset",
    "*.prefab",
    "*.meta",
]

[dependencies]
serde = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }

# Async support (optional)
tokio = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio-test = "0.4"

[features]
default = []
async = ["tokio", "async-trait", "futures"]
