[package]
name = "unity-asset-search-index"
version = "0.0.0"
publish = false
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
walkdir.workspace = true
tantivy.workspace = true
unity-asset-search-core = { path = "../unity-asset-search-core" }
