[package]
name = "unity-asset-yaml"
version = "0.1.0"
edition = "2024"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
description = "YAML format support for Unity asset parsing"
license = "MIT"
keywords = ["unity", "yaml", "parser", "game"]
categories = ["parsing", "game-development"]

[dependencies]
# Core dependency
unity-asset-core = { path = "../unity-asset-core" }

# 使用workspace共享的依赖
serde = { workspace = true }
serde_yaml = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }

# Async support (optional)
tokio = { version = "1.0", features = ["fs", "io-util", "rt", "macros"], optional = true }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio-test = "0.4"

[features]
default = []
async = ["unity-asset-core/async", "tokio", "async-trait", "futures"]
