[package]
name = "unity-asset-yaml"
version = "0.1.0"
edition = "2021"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
description = "YAML format support for Unity asset parsing"
license = "MIT"
repository = "https://github.com/Latias94/unity-asset"
documentation = "https://docs.rs/unity-asset-yaml"
keywords = ["unity", "yaml", "parser", "game"]
categories = ["parsing", "game-development"]
exclude = ["tests/samples/*"]

[dependencies]
# Core dependency
unity-asset-core = { path = "../unity-asset-core", version = "0.1.0" }

# Workspace dependencies
serde = { workspace = true }
serde_yaml = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }

# Async support (optional)
tokio = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio-test = "0.4"

[features]
default = []
async = ["unity-asset-core/async", "tokio", "async-trait", "futures"]
