[package]
name = "unity-asset-v2-integration"
version = "0.1.0"
edition = "2021"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
description = "Unity Asset V2 Integration Tests"

[dependencies]
# V2 modules
unity-asset-core-v2 = { path = "unity-asset-core-v2" }
unity-asset-yaml-v2 = { path = "unity-asset-yaml-v2" }
unity-asset-binary-v2 = { path = "unity-asset-binary-v2" }

# Async runtime
tokio = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }
