[package]
name = "unity-asset-search-cli"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
description = "CLI client for unity-asset-search-daemon (debug/ops utility)"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://github.com/Latias94/unity-asset"
keywords = ["unity", "search", "cli"]
categories = ["command-line-utilities", "game-development"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.dist]
dist = true
