[package]
name = "unity-asset-search-daemon"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
description = "Local HTTP daemon for Unity project search (used by UnityHero)"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://github.com/Latias94/unity-asset"
keywords = ["unity", "search", "daemon", "references"]
categories = ["command-line-utilities", "game-development"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap.workspace = true
tower-http.workspace = true
rand.workspace = true
hex.workspace = true
notify.workspace = true
unity-asset-search-index = { path = "../../crates/unity-asset-search-index", version = "0.3.0" }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.dist]
dist = true
