[package]
name = "unity-asset-binary"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
description = "Unity binary file format parser (AssetBundle, SerializedFile)"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/unity-asset-binary"
keywords = ["unity", "binary", "assetbundle", "serialized", "parser"]
categories = ["parser-implementations", "game-development"]
exclude = [
    "tests/samples/*",
    "tests/fixtures/*",
    "*.ab",
    "*.unity",
    "*.asset",
    "*.prefab",
    "*.meta",
]

[dependencies]
# Core dependencies
unity-asset-core = { path = "../unity-asset-core", version = "0.2.0" }
serde = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
serde_json = { workspace = true }

# Binary parsing
binrw = { workspace = true }
byteorder = { workspace = true }
regex = { workspace = true }

# Compression support
flate2 = { workspace = true }
lz4_flex = { workspace = true }
lzma-rs = "0.3"
brotli = "3.4"
memmap2 = { version = "0.9", optional = true }

# Performance and utilities
once_cell = { workspace = true }
num_cpus = "1.16"

# Async support (optional)
tokio = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
async-stream = { workspace = true, optional = true }

[features]
default = []

# 异步支持
async = ["unity-asset-core/async", "tokio", "futures", "async-trait", "tokio-stream", "async-stream"]
mmap = ["dep:memmap2"]

[dev-dependencies]
hex = "0.4"
tempfile = { workspace = true }

[package.metadata.docs.rs]
no-default-features = true
all-features = false
features = []
rustdoc-args = ["--cfg", "docsrs"]
