[package]
name = "unity-asset-search-core"
version = "0.3.0"
publish = false
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
unicode-normalization.workspace = true
fuzzy-matcher.workspace = true
serde.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
