[package]
name = "unity-asset-search-index"
version = "0.2.0"
publish = false
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
tantivy.workspace = true
ignore.workspace = true
once_cell.workspace = true
unity-asset-search-core = { path = "../unity-asset-search-core" }
unity-asset-binary = { path = "../unity-asset-binary", version = "0.2.0" }

[dev-dependencies]
tempfile.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
