[package]
name = "unity-asset-yaml"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
description = "YAML format support for Unity asset parsing"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/unity-asset-yaml"
keywords = ["unity", "yaml", "parser", "game"]
categories = ["parsing", "game-development"]
exclude = [
    "tests/fixtures/*",
    "tests/samples/*",
    "*.ab",
    "*.unity",
    "*.asset",
    "*.prefab",
    "*.meta",
]

[dependencies]
# Core dependency
unity-asset-core = { path = "../unity-asset-core", version = "0.3.0" }

# Workspace dependencies
serde = { workspace = true }
serde_yaml = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }

# Async support (optional)
tokio = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio-test = "0.4"

[features]
default = []
async = ["unity-asset-core/async", "tokio", "async-trait", "futures"]

[package.metadata.docs.rs]
no-default-features = true
all-features = false
features = []
rustdoc-args = ["--cfg", "docsrs"]
