[package]
name = "unity-asset"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
description = "A comprehensive Rust library for parsing Unity asset files (YAML and binary formats)"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/unity-asset"
readme = "../../README.md"
keywords = ["unity", "assets", "parser", "game", "yaml"]
categories = ["parsing", "game-development"]
exclude = [
    "tests/fixtures/*",
    "tests/samples/*",
    "*.ab",
    "*.unity",
    "*.asset",
    "*.prefab",
    "*.meta",
]

[dependencies]
# Re-export sub-crates
unity-asset-core = { path = "../unity-asset-core", version = "0.3.0" }
unity-asset-yaml = { path = "../unity-asset-yaml", version = "0.3.0" }
unity-asset-binary = { path = "../unity-asset-binary", version = "0.3.0" }
unity-asset-write = { path = "../unity-asset-write", version = "0.3.0" }
ignore = { workspace = true }

[features]
default = ["mmap"]
async = ["unity-asset-core/async", "unity-asset-yaml/async", "unity-asset-binary/async"]
mmap = ["unity-asset-binary/mmap"]

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
unity-asset-decode = { path = "../unity-asset-decode", version = "0.3.0", features = ["audio"] }
serde = { workspace = true }
serde_json = { workspace = true }

[package.metadata.docs.rs]
no-default-features = true
all-features = false
features = ["mmap"]
rustdoc-args = ["--cfg", "docsrs"]
