[package]
name = "unity-asset-cli-v2"
version = "0.1.0"
edition = "2021"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
description = "Unity Asset CLI V2 - Async command line tool"
license = "MIT"

[[bin]]
name = "unity-asset-v2"
path = "src/main.rs"

[dependencies]
# Core v2 dependencies
unity-asset-core-v2 = { path = "../unity-asset-core-v2" }
unity-asset-yaml-v2 = { path = "../unity-asset-yaml-v2" }
unity-asset-binary-v2 = { path = "../unity-asset-binary-v2" }

# CLI framework
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }